--- a/style.css
+++ b/style.css
@@ -7,16 +7,27 @@ html, body {
 body {
   background-size: cover;
   font-family: "Trebuchet MS", sans-serif;
-  background: url("Meedia/backupBackground.png") no-repeat 50% 50%;
 }
 
-#sunsetVideo {
-  position: absolute;
-  top: 0;
-  left: 0;
+.video-container video, img {
   min-width: 100%;
   min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-60%);
   z-index: -1;
+}
+
+.video-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 #kell, #kuupäev, #ilm {
